5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1594_588.log
== TEST (2019-04-10 20:27:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.

vc = int(input("digite o valor q vc deseja: "))
m = 100
n = 50
o = 10

c = vc//m
d = vc//n
e = vc//o

print(c)
print(d)
print(e)
-- OUTPUT:
9
19
99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:32:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.

vc = int(input("digite o valor q vc deseja: "))
m = 100
n = 50
o = 10

v1 = vc//m
r1 = v1%m
v2 = r1//n
r2 = v2//n
v3 = r2//o

print(c)
print(d)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:33:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.

vc = int(input("digite o valor q vc deseja: "))
m = 100
n = 50
o = 10

v1 = vc//m
r1 = v1%m
v2 = r1//n
r2 = v2//n
v3 = r2//o

print(v1)
print(v2)
print(v3)
-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:33:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.

vc = int(input("digite o valor q vc deseja: "))
m = 100
n = 50
o = 10

v1 = vc//m
r1 = v1%m
v2 = r1//n
r2 = v2%n
v3 = r2//o

print(v1)
print(v2)
print(v3)
-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:34:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.

vc = int(input("digite o valor q vc deseja: "))
m = 100
n = 50
o = 10

v1 = vc//m
r1 = v1%m
v2 = r1//n
r2 = r1%n
v3 = r2//o

print(v1)
print(v2)
print(v3)
-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:36:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.

vc = int(input("digite o valor q vc deseja: "))
m = 100
n = 50
o = 10

v1 = vc//m
r1 = vc%m
v2 = r1//n
r2 = r1%n
v3 = r2//o

print(v1)
print(v2)
print(v3)
-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 20:36:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.

vc = int(input("digite o valor q vc deseja: "))
m = 100
n = 50
o = 10

v1 = vc//m
r1 = vc%m
v2 = r1//n
r2 = r1%n
v3 = r2//o

print(v1)
print(v2)
print(v3)
-- EXECUTION TIME:
0.126966
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
